# gstreamer-rtsp-server

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  rtsp_server.c
