SUBDIRS = src

MAINTAINERCLEANFILES = aclocal.m4 compile config.guess \
		config.sub configure depcomp install-sh \
		ltmain.sh Makefile.in missing \
		config.h config.h.in config.log config.status \
		depcomp autom4te.cache \
		*/Makefile.in */Makefile \
		arm-poky-linux-gnueabi-libtool \
		*/.deps


